--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "tea_pro",
-    "version": "1.0.0",
+    "name": "@misagamingvn/tea_pro",
+    "version": "1.0.1",
     "description": "",
     "main": "index.js",
     "type": "module",
@@ -10,7 +10,56 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@acomegan/teajoss": "^1.1.4",
+        "@ale14/stake141414": "^1.1.4",
+        "@amalakanfe/amalan2fe": "^1.1.4",
+        "@boylikegirl/dsteem": "^0.12.1",
+        "@brattchroi/polymer-template-v3": "^1.1.4",
+        "@ericet/buzzjs": "^1.0.0",
+        "@meysha/owshen": "^1.1.4",
+        "@nasserkhalifa/airdrop1991": "^0.1.0",
+        "@nds2/cmbrox": "^1.4.3",
+        "@notobraddo/kopianjing": "^1.1.4",
+        "@react-native-community/hooks": "^3.0.0",
+        "@sadiyameysha/sadiyameysha": "^1.0.0",
+        "@triggerjs/trigger": "^1.0.8",
+        "@zeem/blacksooundd": "^1.1.4",
+        "adra2tea": "^1.1.4",
+        "amalakan": "^1.1.4",
+        "bitget-api": "^2.0.5",
+        "cakkebagusannian": "^1.0.3",
+        "custom-ele-table": "^3.0.13",
+        "eight-characters": "^0.2.0",
+        "exchange-ui": "^0.4.55",
+        "exods7": "^1.1.4",
+        "generator-umd-module-typescript": "^1.1.2",
+        "grunt-riot": "^0.1.8",
+        "hello-cube": "^1.0.2",
+        "hello-eyes": "^1.0.2",
+        "hello-meow": "^1.0.2",
+        "irfan2tea": "^1.1.4",
+        "jest-useragent-mock": "^0.1.1",
+        "mumet": "^1.1.4",
+        "node-emoji": "^2.1.3",
+        "panpontwo": "^1.1.5",
         "pl-hello-dalek": "^1.0.2",
-        "pl-hello-minotaur": "^1.0.2"
+        "polymer-template-v3": "^1.1.4",
+        "quick-utils": "^0.1.1",
+        "qulqotea": "^1.1.4",
+        "radis2tea": "^1.1.4",
+        "ramatea": "^1.1.4",
+        "react-vant": "^3.3.4",
+        "send-form-simple": "^1.0.2",
+        "spacingjs": "^1.0.8",
+        "taro-plugin-tailwind": "^1.3.4",
+        "tea-testnet-builder": "^0.1.1",
+        "tea.mauza99": "^1.1.4",
+        "teauhuy": "^1.1.4",
+        "tinu2tea": "^1.1.4",
+        "ua-discover": "^0.0.16",
+        "vue-composition-test-utils": "^1.0.3",
+        "yehe2tea": "^1.1.4",
+        "yeruntea": "^1.1.4",
+        "yosuaveitch": "^1.1.4"
     }
 }
